For Next Release
================
 -Added a new syntax for verbose embeddings. This adds parentheses: 
      $from(action_name);
  Verbose embeddings without parentheses can make code difficult to read
  because they force a space in the middle of an action embedding. There is a
  tendency to associtate spaces with concatenation. Without syntax
  highlighting to make it clear that the embedding type is a keyword, the
  problem is especially bad. The danger is that a verbose embedding could be
  read as an embedding of the embedding type:
      main := 'foo' $from some_action '\n';
  With parentheses this statment reads much more clearly.
      main := 'foo' $from(some_action) '\n';

Ragel 5.18 - February 13, 2007
==============================
 -There is now a 100% correspondence between state id numbers in the
  intermediate XML file, Graphviz dot files and generated code. This was
  achieved by moving code which determines if the error state is necessary
  into the frontend, and then assigning state numbers before writing out the
  intermediate file.
 -Backened class structure was reorganized to make it easier to add new code
  generators without having to also modify the existing code generators.
 -The C and D code generation executable was changed to rlgen-cd.
 -The Java code generation was split out into it's own exectuable (rlgen-java)
  to allow it to freely diverge from the C/D-based code generation.
 -The graphviz dot file generation was also split out to it's own executable
  (rlgen-dot).
 -The Ruby code generation patch from Victor Hugo Borja was added. This is
  highly experimental code and is not yet completely functional. It is in the
  executable rlgen-ruby.
 -The problem with large state machine machines in Java was fixed. This
  problem was discovered by Colin Fleming, who also contributed a patch.
  Rather than specify arrays as comma-separated lists of literals, array
  initialization is now done in a static function. This is the approach used